--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="col-md-6 ftco-animate">
           	<h2 class="subheading">Aku mencintaimu.</h2>
           	<h1 class="mb-4">Itu sebabnya aku takkan pernah selesai mendoakan keselamatanmu</h1>
-            <p><a href="#" class="btn btn-primary mr-md-4 py-2 px-4">Sapardi Djoko Damono <span class="ion-ios-arrow-forward"></span></a></p>
+            <p><a href="#" class="btn btn-primary mr-md-4 py-2 px-4">Abel<span class="ion-ios-arrow-forward"></span></a></p>
           </div>
         </div>
       </div>
