--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-start" data-scrollax-parent="true">
           <div class="col-md-6 ftco-animate">
           	<h2 class="subheading">Aku mencintaimu.</h2>
-          	<h1 class="mb-4">Itu sebabnya aku takkan pernah selesai mendoakan keselamatanmu</h1>
-            <p><a href="#" class="btn btn-primary mr-md-4 py-2 px-4">Abel<span class="ion-ios-arrow-forward"></span></a></p>
+          	<h1 class="mb-4">Camar</h1>
+            <p><a href="#" class="btn btn-primary mr-md-4 py-2 px-4">From : Abel<span class="ion-ios-arrow-forward"></span></a></p>
           </div>
         </div>
       </div>
